left pane overflow fix

--- a/css/groundwater.css
+++ b/css/groundwater.css
@@ -181,6 +181,7 @@ body{
 	width:350px;
 	padding:5px;
 	background:#E2F0F1;
+  overflow:hidden;
 }
 
 #leftPaneHeader >a{
@@ -264,13 +265,15 @@ body{
 #pane1{
 	font-size:15px;
 	font:Verdana, Geneva, sans-serif;
-  overflow:hidden;
+  overflow-x:hidden;
 }
 
 #pane1 >div{
   margin-left:20px;
 }
-
+.dijitAccordionContainer-dijitContentPane{
+  overflow-y:auto;
+}
 .dijitInputField.dijitInputContainer.dijitReset{
   padding-left: 5px;
 }
